WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85988
MediaStream API: SessionDescription::addCandidate should not crash for malformed input
https://bugs.webkit.org/show_bug.cgi?id=85988
Summary
MediaStream API: SessionDescription::addCandidate should not crash for malfor...
Tommy Widenflycht
Reported
2012-05-09 05:45:04 PDT
Sending null would crash the browser. Added safeguards in both the bindings and the native code.
Attachments
Patch
(6.50 KB, patch)
2012-05-09 05:50 PDT
,
Tommy Widenflycht
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tommy Widenflycht
Comment 1
2012-05-09 05:50:00 PDT
Created
attachment 140928
[details]
Patch
Adam Barth
Comment 2
2012-05-09 08:02:59 PDT
Comment on
attachment 140928
[details]
Patch I support not crashing. :)
WebKit Review Bot
Comment 3
2012-05-09 08:55:16 PDT
Comment on
attachment 140928
[details]
Patch Clearing flags on attachment: 140928 Committed
r116530
: <
http://trac.webkit.org/changeset/116530
>
WebKit Review Bot
Comment 4
2012-05-09 08:55:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug