MediaStream API: SessionDescription::addCandidate should not crash for malformed input https://bugs.webkit.org/show_bug.cgi?id=85988

Reviewed by Adam Barth.

Source/WebCore:

Sending null would crash the browser. Added safeguards in both the bindings and the native code.

Test: fast/mediastream/SessionDescription.html

* Modules/mediastream/SessionDescription.cpp:
(WebCore::SessionDescription::addCandidate):
* Modules/mediastream/SessionDescription.h:
(SessionDescription):
* Modules/mediastream/SessionDescription.idl:

LayoutTests:

* fast/mediastream/SessionDescription-expected.txt: Added.
* fast/mediastream/SessionDescription.html: Added.


Canonical link: https://commits.webkit.org/103579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116530 268f45cc-cd09-0410-ab3c-d52691b4dbfc